funcionamento ok de autentificaçao de usuario